SERVER-54128 Don't push down expressions past sort+limit